# qspeak

./: .gitignore  .prettierrc  CLAUDE.md  LICENSE  README.md  changelog.json  flatpak-README.md  onboarding.html  org.qforge.qspeak.metainfo.xml  org.qforge.qspeak.yml  package.json  pnpm-lock.yaml  qspeak-cli  recorder.html  settings.html  tsconfig.json  vite.config.ts
.cursor/rules/: backend-structure.mdc  frontend-structure.mdc  project-overview.mdc
.github/scripts/: README.md  extract-changelog.js
.github/workflows/: apple-id-test.yml  release.yml
public/locales/en/: onboarding.json  recorder.json  settings.json
public/locales/pl/: onboarding.json  recorder.json  settings.json
src/: global.css  i18n.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/kobold-configs/: null.kcpps  qwen.kcpps
src-tauri/qspeak-audio-player/: Cargo.toml
src-tauri/qspeak-audio-player/src/: lib.rs
src-tauri/qspeak-audio-recording/: Cargo.toml
src-tauri/qspeak-audio-recording/src/: lib.rs
src-tauri/qspeak-keyboard/: Cargo.toml
src-tauri/qspeak-keyboard/src/: lib.rs
src-tauri/qspeak-screenshot/: Cargo.toml
src-tauri/qspeak-screenshot/src/: lib.rs
src-tauri/src/: constants.rs  feature_flags.rs  koboldcpp_server.rs  lib.rs  main.rs
src-tauri/src/api/: accounts.rs  mod.rs  releases.rs
src-tauri/src/llm/: openai_client.rs
src-tauri/src/state_machine/: account.rs  challenges.rs  errors.rs  events.rs  history.rs  mod.rs  models.rs  new_app.rs  new_conversation.rs  new_kobold_server.rs  new_mcp_processor.rs  new_models.rs  new_onboarding_window.rs  new_personas.rs  new_recording_window.rs  new_settings_window.rs  new_shortcuts.rs  new_update.rs  permissions.rs  personas.rs  processor.rs  releases.rs  state.rs  types.rs  websocket_server.rs
src/components/: alert-dialog.tsx  alert.tsx  badge.tsx  basic-link.tsx  button.tsx  card.tsx  carousel.tsx  checkbox.tsx  custom-tab.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  interface-language-select.tsx  items-list.tsx  label.tsx  layout.tsx  markdown.tsx  messages.tsx  models-cards.tsx  preferred-languages-selector.tsx  radio-group.tsx  select.tsx  shortcut.tsx  sonner.tsx  switch.tsx  tabs.tsx  textarea.tsx  toasts.tsx  tooltip.tsx  window-management.tsx
src/hooks/: useAppState.tsx  useBoolean.tsx  useConversationState.tsx  useErrorToasts.tsx  useInterfaceLanguage.tsx  useInternetConnection.tsx  useLocation.ts  useModelsState.tsx  useNavigate.ts  useNewState.tsx  usePersonas.tsx  useQSpeakLinks.tsx  useRecordingWindowState.tsx  useStreamingAudio.tsx  useVersion.tsx
src/icons/: discord-svg.tsx  icons-registry.personas.tsx  icons.types.ts  linkedin-svg.tsx
src/onboarding/: App.tsx  main.tsx  onboarding.css  routes.ts
src/onboarding/components/: onboarding.components.tsx
src/onboarding/hooks/: useAudioDevices.ts  useOnboardingNavigate.ts  useTranscriptionModels.ts
src/onboarding/pages/: login.tsx  media-select.tsx  onboarding-finished.tsx  permissions.tsx  persona-select.tsx  root.tsx  transcription-language.tsx  transcription-models.tsx  transcription-run.tsx  transformation.run.tsx  verification-code.tsx
src/recorder/: App.tsx  audio.utils.ts  env.d.ts  main.tsx  recorder.reducer.ts
src/recorder/components/: animated-dots.tsx  audio-player.tsx  history-select.tsx  language-select.tsx  layout.tsx  maximize-layout.tsx  new-chat-button.tsx  personas-select.tsx  recorder-status-indicator.tsx  shining-logo.tsx  (+3 more)
src/settings/: App.tsx  main.tsx  settings.css
src/shared/: constants.ts  conversation.ts  json-patch.ts  languages.ts  model-templates.ts  types.ts
src/utils/: custom-date.ts  shortcut.ts
(+40 files in other folders)
